clean-up of file

--- a/geo_timing.ipynb
+++ b/geo_timing.ipynb
@@ -184,6 +184,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Constants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = 6378137  # Semi-major axis \n",
+    "b = 6356752.3142  # Semi-minor axis\n",
+    "f = (a - b) / a  # flattening\n",
+    "e = 0.081819191 # eccentricity\n",
+    "ecc = 1 - e*e"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Native Python Lists"
    ]
   },
@@ -206,11 +228,6 @@
     }
    ],
    "source": [
-    "a = 6378137  # Semi-major axis \n",
-    "b = 6356752.3142  # Semi-minor axis\n",
-    "f = (a - b) / a  # flattening\n",
-    "e = 0.081819191\n",
-    "\n",
     "def LLAtoXYZ_raw (latitude, longitude, altitude, geoidSepIn = 0):\n",
     "    # LLAtoXYZ converts a position (latitude, longitude, altitude) to the ECEF X, Y, Z format.\n",
     "    # The function expects Lat and Long in degrees and Alt in meters and outputs X, Y, Z in meters. \n",
@@ -571,28 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Summary\n",
-    "Method|Timing (µs)|Vs Native Python\n",
-    "---|---:|---:\n",
-    "Native Python|2990|N/A\n",
-    "Numpy|193|15.5X faster\n",
-    "Pandas (Serialized)|61400|20.5X *slower*\n",
-    "Pandas (Vectorized)|2570|1.2X faster\n",
-    "Numba with Numpy Arrays|187|16.0X faster\n",
-    "Numba with Vectorized Pandas|2190|1.4X faster\n",
-    "Numexpr with Numpy Arrays|151|19.8X faster\n",
-    "Numexpr with Vectorized Pandas|960|3.1X faster"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "timing_results['Vs Native Python'] = timing_results.loc['Native Python']['Best'] / timing_results['Best']"
+    "# Summary"
    ]
   },
   {
@@ -709,9 +705,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Py3.5]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Py3.5]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -723,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
