Updated the function to make it more efficient * imported functions directly (using from) * pre-computed e^2. * used X * X instead of pow(X,2)

--- a/geo_timing.ipynb
+++ b/geo_timing.ipynb
@@ -12,7 +12,7 @@
     "import platform\n",
     "import os\n",
     "import random as rnd\n",
-    "import math\n",
+    "from math import sqrt, sin, cos, radians\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from numba import jit\n",
@@ -38,15 +38,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python: 3.5.2 |Anaconda 4.1.1 (64-bit)| (default, Jul  5 2016, 11:41:13) [MSC v.1900 64 bit (AMD64)]\n",
-      "Numpy: 1.11.1\n",
-      "Pandas: 0.18.1\n",
-      "Numba: 0.26.0\n",
-      "Numexpr: 2.6.0\n",
-      "Processor: Intel64 Family 6 Model 78 Stepping 3, GenuineIntel\n",
+      "Python: 3.4.4 |Anaconda 2.3.0 (x86_64)| (default, Jan  9 2016, 17:30:09) \n",
+      "[GCC 4.2.1 (Apple Inc. build 5577)]\n",
+      "Numpy: 1.10.4\n",
+      "Pandas: 0.18.0\n",
+      "Numba: 0.19.1\n",
+      "Numexpr: 2.5.2\n",
+      "Processor: i386\n",
       "# of Cores: 4\n",
-      "Machine: AMD64\n",
-      "Architecture: ('64bit', 'WindowsPE')\n"
+      "Machine: x86_64\n",
+      "Architecture: ('64bit', '')\n"
      ]
     }
    ],
@@ -94,7 +95,7 @@
     }
    ],
    "source": [
-    "size=1000000\n",
+    "size = 1000000\n",
     "points = []\n",
     "for i in range(size):\n",
     "    points.append((rnd.uniform(-85,85),rnd.uniform(-175,175),rnd.uniform(-50,12000), rnd.uniform(-50,50)))\n",
@@ -105,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Numpy arrays, 4 arrays each 1000 long."
+    "Numpy arrays, 4 arrays each 1,000,000 long."
    ]
   },
   {
@@ -142,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pandas DataFrame that is 1000 x 4"
+    "Pandas DataFrame of the points."
    ]
   },
   {
@@ -189,9 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -199,7 +200,7 @@
     "b = 6356752.3142  # Semi-minor axis\n",
     "f = (a - b) / a  # flattening\n",
     "e = 0.081819191 # eccentricity\n",
-    "ecc = 1 - e*e"
+    "ee = e*e"
    ]
   },
   {
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -222,7 +223,7 @@
        "(-2856867.422762463, -4132876.8004144537, -3916387.577890978)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,14 +235,15 @@
     "    # geoidSepIn is the height of the geoid above the WGS84 ellipsoid. It is optional and assumed \n",
     "    # to be 0 if not provided (meaning geoid-to-ellipsoid differences are ignored)\n",
     "    \n",
-    "    latitude_rad = math.radians(latitude)\n",
-    "    longitude_rad = math.radians(longitude)\n",
+    "    latitude_rad = radians(latitude)\n",
+    "    longitude_rad = radians(longitude)\n",
     "    height = altitude - geoidSepIn\n",
+    "    cos_lat = cos(latitude_rad)\n",
     "     \n",
-    "    r = a / math.sqrt(1 - math.pow(e, 2) * math.pow(math.sin(latitude_rad), 2))\n",
-    "    x = (r + height) * math.cos(latitude_rad) * math.cos(longitude_rad)\n",
-    "    y = (r + height) * math.cos(latitude_rad) * math.sin(longitude_rad)\n",
-    "    z = ((1 - math.pow(e, 2)) * r + height) * math.sin(latitude_rad)\n",
+    "    r = a / sqrt(1 - ee * sin(latitude_rad) * sin(latitude_rad))\n",
+    "    x = (r + height) * cos_lat * cos(longitude_rad)\n",
+    "    y = (r + height) * cos_lat * sin(longitude_rad)\n",
+    "    z = ((1 - ee) * r + height) * sin(latitude_rad)\n",
     "        \n",
     "    return x,y,z\n",
     "LLAtoXYZ_raw(-38.123456,-124.65432,230,-20)\n",
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +263,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 3.1 s per loop\n"
+      "1 loop, best of 5: 2.04 s per loop\n"
      ]
     }
    ],
@@ -280,7 +282,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#import numpy functions directly\n",
+    "from numpy import sqrt, sin, cos, radians"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +305,7 @@
        "(-2856867.4227624629, -4132876.8004144537, -3916387.5778909782)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,14 +317,15 @@
     "    # geoidSepIn is the height of the geoid above the WGS84 ellipsoid. It is optional and assumed \n",
     "    # to be 0 if not provided (meaning geoid-to-ellipsoid differences are ignored)\n",
     "    \n",
-    "    latitude_rad = np.radians(latitude)\n",
-    "    longitude_rad = np.radians(longitude)\n",
+    "    latitude_rad = radians(latitude)\n",
+    "    longitude_rad = radians(longitude)\n",
     "    height = altitude - geoidSepIn\n",
+    "    cos_lat = cos(latitude_rad)\n",
     "     \n",
-    "    r = a / np.sqrt(1 - np.power(e, 2) * np.power(np.sin(latitude_rad), 2))\n",
-    "    x = (r + height) * np.cos(latitude_rad) * np.cos(longitude_rad)\n",
-    "    y = (r + height) * np.cos(latitude_rad) * np.sin(longitude_rad)\n",
-    "    z = ((1 - np.power(e, 2)) * r + height) * np.sin(latitude_rad)\n",
+    "    r = a / sqrt(1 - ee * sin(latitude_rad) * sin(latitude_rad))\n",
+    "    x = (r + height) * cos_lat * cos(longitude_rad)\n",
+    "    y = (r + height) * cos_lat * sin(longitude_rad)\n",
+    "    z = ((1 - ee) * r + height) * sin(latitude_rad)\n",
     "    \n",
     "    if return_array:\n",
     "        return np.array([x,y,z])\n",
@@ -325,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -334,7 +349,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 186 ms per loop\n"
+      "1 loop, best of 5: 187 ms per loop\n"
      ]
     }
    ],
@@ -352,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -361,7 +376,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 52.2 s per loop\n"
+      "1 loop, best of 5: 1min 6s per loop\n"
      ]
     }
    ],
@@ -379,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -388,7 +403,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 185 ms per loop\n"
+      "1 loop, best of 5: 169 ms per loop\n"
      ]
     }
    ],
@@ -406,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -417,7 +432,7 @@
        "(-2856867.4227624629, -4132876.8004144537, -3916387.5778909782)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,14 +445,15 @@
     "    # geoidSepIn is the height of the geoid above the WGS84 ellipsoid. It is optional and assumed \n",
     "    # to be 0 if not provided (meaning geoid-to-ellipsoid differences are ignored)\n",
     "    \n",
-    "    latitude_rad = np.radians(latitude)\n",
-    "    longitude_rad = np.radians(longitude)\n",
+    "    latitude_rad = radians(latitude)\n",
+    "    longitude_rad = radians(longitude)\n",
     "    height = altitude - geoidSepIn\n",
+    "    cos_lat = cos(latitude_rad)\n",
     "     \n",
-    "    r = a / np.sqrt(1 - np.power(e, 2) * np.power(np.sin(latitude_rad), 2))\n",
-    "    x = (r + height) * np.cos(latitude_rad) * np.cos(longitude_rad)\n",
-    "    y = (r + height) * np.cos(latitude_rad) * np.sin(longitude_rad)\n",
-    "    z = ((1 - np.power(e, 2)) * r + height) * np.sin(latitude_rad)\n",
+    "    r = a / np.sqrt(1 - ee * sin(latitude_rad) * sin(latitude_rad))\n",
+    "    x = (r + height) * cos_lat * cos(longitude_rad)\n",
+    "    y = (r + height) * cos_lat * sin(longitude_rad)\n",
+    "    z = ((1 - ee) * r + height) * sin(latitude_rad)\n",
     "    \n",
     "    if return_array:\n",
     "        return np.array([x,y,z])\n",
@@ -452,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -461,7 +477,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 183 ms per loop\n"
+      "1 loop, best of 5: 166 ms per loop\n"
      ]
     }
    ],
@@ -472,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -481,7 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 183 ms per loop\n"
+      "1 loop, best of 5: 171 ms per loop\n"
      ]
     }
    ],
@@ -499,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -512,7 +528,7 @@
        " array(-3916387.577890978))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,14 +540,14 @@
     "    # geoidSepIn is the height of the geoid above the WGS84 ellipsoid. It is optional and assumed \n",
     "    # to be 0 if not provided (meaning geoid-to-ellipsoid differences are ignored)\n",
     "    \n",
-    "    latitude_rad = np.radians(latitude)\n",
-    "    longitude_rad = np.radians(longitude)\n",
+    "    latitude_rad = radians(latitude)\n",
+    "    longitude_rad = radians(longitude)\n",
     "    height = altitude - geoidSepIn\n",
     "     \n",
-    "    r = ne.evaluate(\"a / sqrt(1 - e**2 * sin(latitude_rad)**2)\")\n",
+    "    r = ne.evaluate(\"a / sqrt(1 - ee * sin(latitude_rad)**2)\")\n",
     "    x = ne.evaluate(\"(r + height) * cos(latitude_rad) * cos(longitude_rad)\")\n",
     "    y = ne.evaluate(\"(r + height) * cos(latitude_rad) * sin(longitude_rad)\")\n",
-    "    z = ne.evaluate(\"((1 - e**2) * r + height) * sin(latitude_rad)\")\n",
+    "    z = ne.evaluate(\"((1 - ee) * r + height) * sin(latitude_rad)\")\n",
     "    \n",
     "    if return_array:\n",
     "        return np.array([x,y,z])\n",
@@ -546,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -555,7 +571,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 39.9 ms per loop\n"
+      "1 loop, best of 5: 45.1 ms per loop\n"
      ]
     }
    ],
@@ -566,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -575,7 +591,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 46.5 ms per loop\n"
+      "1 loop, best of 5: 52.1 ms per loop\n"
      ]
     }
    ],
@@ -593,7 +609,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "timing_results['Vs Native Python'] = timing_results.loc['Native Python']['Best (sec)'] / timing_results['Best (sec)']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -608,7 +635,7 @@
        "      <th></th>\n",
        "      <th>Loops</th>\n",
        "      <th>Repeat</th>\n",
-       "      <th>Best</th>\n",
+       "      <th>Best (sec)</th>\n",
        "      <th>Vs Native Python</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -617,81 +644,81 @@
        "      <th>Numexpr with Numpy Arrays</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.039934</td>\n",
-       "      <td>77.726683</td>\n",
+       "      <td>0.045142</td>\n",
+       "      <td>45.144617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numexpr with Vectorized Pandas</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.046478</td>\n",
-       "      <td>66.783515</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Numba with Vectorized Pandas</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.182670</td>\n",
-       "      <td>16.992103</td>\n",
+       "      <td>0.052096</td>\n",
+       "      <td>39.118755</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numba with Numpy Arrays</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.182699</td>\n",
-       "      <td>16.989322</td>\n",
+       "      <td>0.165904</td>\n",
+       "      <td>12.283737</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Pandas (Vectorized)</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.184662</td>\n",
-       "      <td>16.808798</td>\n",
+       "      <td>0.169127</td>\n",
+       "      <td>12.049641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Numba with Vectorized Pandas</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.171399</td>\n",
+       "      <td>11.889926</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numpy</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.186104</td>\n",
-       "      <td>16.678508</td>\n",
+       "      <td>0.186814</td>\n",
+       "      <td>10.908799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Native Python</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>3.103940</td>\n",
+       "      <td>2.037916</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Pandas (Serialized)</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>52.202790</td>\n",
-       "      <td>0.059459</td>\n",
+       "      <td>66.188697</td>\n",
+       "      <td>0.030789</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                Loops  Repeat       Best  Vs Native Python\n",
-       "Numexpr with Numpy Arrays         1.0     5.0   0.039934         77.726683\n",
-       "Numexpr with Vectorized Pandas    1.0     5.0   0.046478         66.783515\n",
-       "Numba with Vectorized Pandas      1.0     5.0   0.182670         16.992103\n",
-       "Numba with Numpy Arrays           1.0     5.0   0.182699         16.989322\n",
-       "Pandas (Vectorized)               1.0     5.0   0.184662         16.808798\n",
-       "Numpy                             1.0     5.0   0.186104         16.678508\n",
-       "Native Python                     1.0     5.0   3.103940          1.000000\n",
-       "Pandas (Serialized)               1.0     5.0  52.202790          0.059459"
+       "                                Loops  Repeat  Best (sec)  Vs Native Python\n",
+       "Numexpr with Numpy Arrays         1.0     5.0    0.045142         45.144617\n",
+       "Numexpr with Vectorized Pandas    1.0     5.0    0.052096         39.118755\n",
+       "Numba with Numpy Arrays           1.0     5.0    0.165904         12.283737\n",
+       "Pandas (Vectorized)               1.0     5.0    0.169127         12.049641\n",
+       "Numba with Vectorized Pandas      1.0     5.0    0.171399         11.889926\n",
+       "Numpy                             1.0     5.0    0.186814         10.908799\n",
+       "Native Python                     1.0     5.0    2.037916          1.000000\n",
+       "Pandas (Serialized)               1.0     5.0   66.188697          0.030789"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "timing_results.sort_values('Best')"
+    "timing_results.sort_values('Best (sec)')"
    ]
   },
   {
