--- a/geo_timing.ipynb
+++ b/geo_timing.ipynb
@@ -38,16 +38,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python: 3.4.4 |Anaconda 2.3.0 (x86_64)| (default, Jan  9 2016, 17:30:09) \n",
-      "[GCC 4.2.1 (Apple Inc. build 5577)]\n",
-      "Numpy: 1.10.4\n",
-      "Pandas: 0.18.0\n",
-      "Numba: 0.19.1\n",
-      "Numexpr: 2.5.2\n",
-      "Processor: i386\n",
+      "Python: 3.5.2 |Anaconda 4.1.1 (64-bit)| (default, Jul  5 2016, 11:41:13) [MSC v.1900 64 bit (AMD64)]\n",
+      "Numpy: 1.11.1\n",
+      "Pandas: 0.18.1\n",
+      "Numba: 0.26.0\n",
+      "Numexpr: 2.6.0\n",
+      "Processor: Intel64 Family 6 Model 78 Stepping 3, GenuineIntel\n",
       "# of Cores: 4\n",
-      "Machine: x86_64\n",
-      "Architecture: ('64bit', '')\n"
+      "Machine: AMD64\n",
+      "Architecture: ('64bit', 'WindowsPE')\n"
      ]
     }
    ],
@@ -263,7 +262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 2.04 s per loop\n"
+      "1 loop, best of 5: 1.97 s per loop\n"
      ]
     }
    ],
@@ -349,7 +348,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 187 ms per loop\n"
+      "1 loop, best of 5: 142 ms per loop\n"
      ]
     }
    ],
@@ -376,7 +375,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 1min 6s per loop\n"
+      "1 loop, best of 5: 59.7 s per loop\n"
      ]
     }
    ],
@@ -403,7 +402,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 169 ms per loop\n"
+      "1 loop, best of 5: 144 ms per loop\n"
      ]
     }
    ],
@@ -477,7 +476,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 166 ms per loop\n"
+      "1 loop, best of 5: 138 ms per loop\n"
      ]
     }
    ],
@@ -497,7 +496,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 171 ms per loop\n"
+      "1 loop, best of 5: 147 ms per loop\n"
      ]
     }
    ],
@@ -515,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -528,7 +527,7 @@
        " array(-3916387.577890978))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -571,7 +570,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 45.1 ms per loop\n"
+      "1 loop, best of 5: 44 ms per loop\n"
      ]
     }
    ],
@@ -582,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -591,7 +590,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 52.1 ms per loop\n"
+      "1 loop, best of 5: 46 ms per loop\n"
      ]
     }
    ],
@@ -609,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -620,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -644,57 +643,57 @@
        "      <th>Numexpr with Numpy Arrays</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.045142</td>\n",
-       "      <td>45.144617</td>\n",
+       "      <td>0.044016</td>\n",
+       "      <td>44.866481</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numexpr with Vectorized Pandas</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.052096</td>\n",
-       "      <td>39.118755</td>\n",
+       "      <td>0.045973</td>\n",
+       "      <td>42.956875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numba with Numpy Arrays</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.165904</td>\n",
-       "      <td>12.283737</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pandas (Vectorized)</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.169127</td>\n",
-       "      <td>12.049641</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Numba with Vectorized Pandas</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.171399</td>\n",
-       "      <td>11.889926</td>\n",
+       "      <td>0.137773</td>\n",
+       "      <td>14.334156</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numpy</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.186814</td>\n",
-       "      <td>10.908799</td>\n",
+       "      <td>0.141659</td>\n",
+       "      <td>13.940934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pandas (Vectorized)</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.144275</td>\n",
+       "      <td>13.688123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Numba with Vectorized Pandas</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.147003</td>\n",
+       "      <td>13.434113</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Native Python</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>2.037916</td>\n",
+       "      <td>1.974855</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Pandas (Serialized)</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>66.188697</td>\n",
-       "      <td>0.030789</td>\n",
+       "      <td>59.717804</td>\n",
+       "      <td>0.033070</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -702,17 +701,17 @@
       ],
       "text/plain": [
        "                                Loops  Repeat  Best (sec)  Vs Native Python\n",
-       "Numexpr with Numpy Arrays         1.0     5.0    0.045142         45.144617\n",
-       "Numexpr with Vectorized Pandas    1.0     5.0    0.052096         39.118755\n",
-       "Numba with Numpy Arrays           1.0     5.0    0.165904         12.283737\n",
-       "Pandas (Vectorized)               1.0     5.0    0.169127         12.049641\n",
-       "Numba with Vectorized Pandas      1.0     5.0    0.171399         11.889926\n",
-       "Numpy                             1.0     5.0    0.186814         10.908799\n",
-       "Native Python                     1.0     5.0    2.037916          1.000000\n",
-       "Pandas (Serialized)               1.0     5.0   66.188697          0.030789"
+       "Numexpr with Numpy Arrays         1.0     5.0    0.044016         44.866481\n",
+       "Numexpr with Vectorized Pandas    1.0     5.0    0.045973         42.956875\n",
+       "Numba with Numpy Arrays           1.0     5.0    0.137773         14.334156\n",
+       "Numpy                             1.0     5.0    0.141659         13.940934\n",
+       "Pandas (Vectorized)               1.0     5.0    0.144275         13.688123\n",
+       "Numba with Vectorized Pandas      1.0     5.0    0.147003         13.434113\n",
+       "Native Python                     1.0     5.0    1.974855          1.000000\n",
+       "Pandas (Serialized)               1.0     5.0   59.717804          0.033070"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,9 +731,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Py3.5]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Py3.5]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -746,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
