updated SE and reran on mac

--- a/geo_timing.ipynb
+++ b/geo_timing.ipynb
@@ -38,12 +38,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python: 3.5.2 |Anaconda 4.1.1 (64-bit)| (default, Jul  5 2016, 11:41:13) [MSC v.1900 64 bit (AMD64)]\n",
+      "Python: 3.5.2 |Anaconda 4.1.1 (x86_64)| (default, Jul  2 2016, 17:52:12) \n",
+      "[GCC 4.2.1 Compatible Apple LLVM 4.2 (clang-425.0.28)]\n",
       "Numpy: 1.11.1\n",
       "Pandas: 0.18.1\n",
       "Numba: 0.26.0\n",
       "Numexpr: 2.6.0\n",
-      "Processor: Intel64 Family 6 Model 78 Stepping 3, GenuineIntel\n",
+      "Intel(R) Math Kernel Library Version 11.3.3 Product Build 20160413 for Intel(R) 64 architecture applications\n",
+      "Processor: i386\n",
       "# of Cores: 4\n",
       "Machine: AMD64\n",
       "Architecture: ('64bit', 'WindowsPE')\n"
@@ -51,11 +53,12 @@
     }
    ],
    "source": [
-    "print(\"Python: {}\\nNumpy: {}\\nPandas: {}\\nNumba: {}\\nNumexpr: {}\".format(sys.version,\n",
-    "                                                                         np.__version__,\n",
-    "                                                                         pd.__version__,\n",
-    "                                                                         numba.__version__,\n",
-    "                                                                         ne.__version__))\n",
+    "print(\"Python: {}\\nNumpy: {}\\nPandas: {}\\nNumba: {}\\nNumexpr: {}\\n{}\".format(sys.version,\n",
+    "                                                                                   np.__version__,\n",
+    "                                                                                   pd.__version__,\n",
+    "                                                                                   numba.__version__,\n",
+    "                                                                                   ne.__version__,\n",
+    "                                                                                   ne.get_vml_version()))\n",
     "print(\"Processor: {}\\n# of Cores: {}\\nMachine: {}\\nArchitecture: {}\".format(platform.processor(),\n",
     "                                                                            os.cpu_count(),\n",
     "                                                                            platform.machine(),\n",
@@ -253,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -262,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 1.97 s per loop\n"
+      "1 loop, best of 5: 2.08 s per loop\n"
      ]
     }
    ],
@@ -281,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +307,7 @@
        "(-2856867.4227624629, -4132876.8004144537, -3916387.5778909782)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -348,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 142 ms per loop\n"
+      "1 loop, best of 5: 193 ms per loop\n"
      ]
     }
    ],
@@ -366,19 +369,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 loop, best of 5: 59.7 s per loop\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "r = %timeit -n 1 -r 5 -o points_df['X'],points_df['Y'],points_df['Z']  = zip(*points_df.apply(lambda row: LLAtoXYZ_raw(row[0],row[1],row[2],row[3]), axis=1))\n",
     "timing_results.loc['Pandas (Serialized)'] = timing_results_filler(r)"
@@ -393,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -402,7 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 144 ms per loop\n"
+      "1 loop, best of 5: 191 ms per loop\n"
      ]
     }
    ],
@@ -420,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -431,7 +426,7 @@
        "(-2856867.4227624629, -4132876.8004144537, -3916387.5778909782)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -476,7 +471,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 138 ms per loop\n"
+      "1 loop, best of 5: 181 ms per loop\n"
      ]
     }
    ],
@@ -487,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -496,7 +491,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 147 ms per loop\n"
+      "1 loop, best of 5: 194 ms per loop\n"
      ]
     }
    ],
@@ -514,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -527,7 +522,7 @@
        " array(-3916387.577890978))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -570,7 +565,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 44 ms per loop\n"
+      "1 loop, best of 5: 45.3 ms per loop\n"
      ]
     }
    ],
@@ -581,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -590,7 +585,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 46 ms per loop\n"
+      "1 loop, best of 5: 53.4 ms per loop\n"
      ]
     }
    ],
@@ -608,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -619,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -643,57 +638,50 @@
        "      <th>Numexpr with Numpy Arrays</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.044016</td>\n",
-       "      <td>44.866481</td>\n",
+       "      <td>0.045299</td>\n",
+       "      <td>45.881279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numexpr with Vectorized Pandas</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.045973</td>\n",
-       "      <td>42.956875</td>\n",
+       "      <td>0.053396</td>\n",
+       "      <td>38.923847</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numba with Numpy Arrays</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.137773</td>\n",
-       "      <td>14.334156</td>\n",
+       "      <td>0.181350</td>\n",
+       "      <td>11.460475</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numpy</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.141659</td>\n",
-       "      <td>13.940934</td>\n",
+       "      <td>0.190800</td>\n",
+       "      <td>10.892863</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Pandas (Vectorized)</th>\n",
+       "      <th>Numpy</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.144275</td>\n",
-       "      <td>13.688123</td>\n",
+       "      <td>0.193426</td>\n",
+       "      <td>10.745000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numba with Vectorized Pandas</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.147003</td>\n",
-       "      <td>13.434113</td>\n",
+       "      <td>0.194023</td>\n",
+       "      <td>10.711949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Native Python</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>1.974855</td>\n",
+       "      <td>2.078361</td>\n",
        "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pandas (Serialized)</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>59.717804</td>\n",
-       "      <td>0.033070</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -701,17 +689,16 @@
       ],
       "text/plain": [
        "                                Loops  Repeat  Best (sec)  Vs Native Python\n",
-       "Numexpr with Numpy Arrays         1.0     5.0    0.044016         44.866481\n",
-       "Numexpr with Vectorized Pandas    1.0     5.0    0.045973         42.956875\n",
-       "Numba with Numpy Arrays           1.0     5.0    0.137773         14.334156\n",
-       "Numpy                             1.0     5.0    0.141659         13.940934\n",
-       "Pandas (Vectorized)               1.0     5.0    0.144275         13.688123\n",
-       "Numba with Vectorized Pandas      1.0     5.0    0.147003         13.434113\n",
-       "Native Python                     1.0     5.0    1.974855          1.000000\n",
-       "Pandas (Serialized)               1.0     5.0   59.717804          0.033070"
+       "Numexpr with Numpy Arrays         1.0     5.0    0.045299         45.881279\n",
+       "Numexpr with Vectorized Pandas    1.0     5.0    0.053396         38.923847\n",
+       "Numba with Numpy Arrays           1.0     5.0    0.181350         11.460475\n",
+       "Pandas (Vectorized)               1.0     5.0    0.190800         10.892863\n",
+       "Numpy                             1.0     5.0    0.193426         10.745000\n",
+       "Numba with Vectorized Pandas      1.0     5.0    0.194023         10.711949\n",
+       "Native Python                     1.0     5.0    2.078361          1.000000"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,6 +717,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Py3.5]",
    "language": "python",
